<resources>
    <string name="app_name">BorisChats</string>
    <string name="sign_in_title">Sign in to BorisChats</string>
    <string name="username_placeholder">Username</string>
    <string name="password_placeholder">Password</string>
    <string name="login_btn">Login</string>
    <string name="btn_go_register_text">Don\'t have an account? Register</string>
    <string name="chat_logo_description">Chat logo</string>
    <string name="goToLogin">Already registered? Login here</string>
    <string name="registerBtnText">Register</string>
    <string name="nickname_placeholder">Nickname</string>
    <string name="confirm_password_placeholder">Confirm password</string>
    <string name="register_title">Welcome to BorisChats</string>
    <string name="upload_profile_picture">Upload profile picture</string>
    <string name="image_will_be_shown_here">Image will be shown here</string>
    <string name="profile_img_description">Profile img</string>
    <string name="BaseUrl">http://10.0.2.2:7007</string>
    <string name="BaseLocalUrl">http://localhost:7007</string>
    <string name="add_new_contact">Add new contact</string>
    <string name="add_a_new_contact">Add a new contact</string>
    <string name="contact_s_username">Contact\'s username</string>
    <string name="choose_a_nickname">Choose a nickname</string>
    <string name="button_add_contact">Save</string>
    <string name="errEmptyContactUsername">Please enter a username</string>
    <string name="errContactUsernameIsUsername">\?No friends?</string>
    <string name="errEmptyContactNickname">Please enter a nickname</string>
    <string name="emptyServerErr">\"Choose a server, maybe \"</string>
    <string name="errEmptyUsername">Please provide a username</string>
    <string name="errInvalidPassword">Password must be non empty and contain a character and a letter!</string>
    <string name="errPassConfirm">This field must be the same as your password!</string>
    <string name="enter_message">Enter Message</string>
    <string name="send_btn">send_btn</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="borisapi_s_address">BorisAPI\'s address</string>
    <string name="settings">Settings</string>
    <string name="save_address">Save</string>
    <string name="go_to_settings">go to settings</string>
</resources>
